sets up initial file structure

--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "eslint": "^5.11.1",
     "jest": "^23.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beccalee123/06-event-driven-apps.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/beccalee123/06-event-driven-apps/issues"
+  },
+  "homepage": "https://github.com/beccalee123/06-event-driven-apps#readme"
 }
