--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^5.11.1",
+    "events": "^3.0.0",
     "jest": "^23.6.0"
   },
   "repository": {
